test: update loading test